[gd_scene load_steps=24 format=3 uid="uid://dveja88ubh5k4"]

[ext_resource type="Script" path="res://player/Player.gd" id="1_nfej1"]
[ext_resource type="Script" path="res://battery_hud.gd" id="2_2tviy"]
[ext_resource type="Script" path="res://flashlight.gd" id="2_jst3g"]
[ext_resource type="Script" path="res://hands_for_ray_cast.gd" id="2_str7r"]
[ext_resource type="AudioStream" uid="uid://b1dxgcy6cflyk" path="res://sounds/flash_on.mp3" id="3_e6qeo"]
[ext_resource type="Texture2D" uid="uid://4gfyntjnkgkv" path="res://icons/battery-0.png" id="4_7135u"]
[ext_resource type="AudioStream" uid="uid://bidye6yt2is4f" path="res://sounds/flash_off.mp3" id="4_ocrwn"]
[ext_resource type="Texture2D" uid="uid://c28l2lvbdo7ry" path="res://icons/battery-25.png" id="5_nmrjm"]
[ext_resource type="Texture2D" uid="uid://dxo50ju36n2ts" path="res://icons/T_Mouse_Left_Key_White.png" id="6_3eqwl"]
[ext_resource type="Texture2D" uid="uid://blnlmeysa2bg8" path="res://icons/battery-50.png" id="6_8fs0f"]
[ext_resource type="Texture2D" uid="uid://q7bclmw6re2v" path="res://icons/battery-75.png" id="7_6j7pn"]
[ext_resource type="Texture2D" uid="uid://dc31xucw22mkm" path="res://icons/battery-100.png" id="8_qx0xh"]
[ext_resource type="AudioStream" uid="uid://cccndtc2cifc2" path="res://sounds/heavy ambiance.mp3" id="9_3jlsf"]
[ext_resource type="AudioStream" uid="uid://dbyjvsc4ats0p" path="res://sounds/footsteps/dirt1.mp3" id="10_yoo6j"]
[ext_resource type="AudioStream" uid="uid://dpgbyg0gwt63m" path="res://sounds/footsteps/dirt2.mp3" id="11_4u4sg"]
[ext_resource type="AudioStream" uid="uid://nv8jx5alj6o1" path="res://sounds/footsteps/dirt3.mp3" id="12_47ptn"]
[ext_resource type="AudioStream" uid="uid://bjwmqsjyhlwgb" path="res://sounds/outside.mp3" id="12_75cni"]
[ext_resource type="Script" path="res://player/stamina_hud.gd" id="13_n10ot"]
[ext_resource type="AudioStream" uid="uid://b6todl2m1tvo5" path="res://sounds/scared.wav" id="14_lbhoc"]
[ext_resource type="AudioStream" uid="uid://kaqshko48a4r" path="res://sounds/footsteps/dirt6.mp3" id="15_1a06v"]
[ext_resource type="AudioStream" uid="uid://bivn3fy7lv1ne" path="res://sounds/breath.wav" id="21_t2lyc"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_c2unh"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_now15"]
random_pitch = 1.2
streams_count = 4
stream_0/stream = ExtResource("10_yoo6j")
stream_1/stream = ExtResource("11_4u4sg")
stream_2/stream = ExtResource("12_47ptn")
stream_3/stream = ExtResource("15_1a06v")

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
collision_layer = 2
collision_mask = 9
script = ExtResource("1_nfej1")
sensitivity = 0.004

[node name="Hands_ForRayCast" type="Node3D" parent="." node_paths=PackedStringArray("cam", "selectionDot")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("2_str7r")
cam = NodePath("../Neck/Camera3D")
selectionDot = NodePath("../CanvasLayer/Control/SelectionIcon")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_c2unh")

[node name="Neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.660457, 0)

[node name="Camera3D" type="Camera3D" parent="Neck"]
fov = 90.0

[node name="Lights" type="Node3D" parent="Neck/Camera3D"]
script = ExtResource("2_jst3g")

[node name="Flashlight" type="SpotLight3D" parent="Neck/Camera3D/Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0054307, 0)
visible = false
light_color = Color(0.92929, 0.882112, 0.787183, 1)
spot_range = 40.0
spot_angle = 30.0

[node name="AmbientLight" type="OmniLight3D" parent="Neck/Camera3D/Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.660457, 0)
light_color = Color(0.654267, 0.654267, 0.654267, 1)
light_energy = 0.2
omni_attenuation = 3.0

[node name="audio_flash_on" type="AudioStreamPlayer3D" parent="Neck/Camera3D/Lights"]
stream = ExtResource("3_e6qeo")
bus = &"SFX"

[node name="audio_flash_off" type="AudioStreamPlayer3D" parent="Neck/Camera3D/Lights"]
stream = ExtResource("4_ocrwn")
bus = &"SFX"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0.25098)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="FirstFlashlight" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 99.0
offset_top = 139.0
offset_right = 302.0
offset_bottom = 162.0
text = "press E to toggle flashlight"

[node name="SelectionIcon" type="TextureRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = 26.0
offset_right = 16.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(4, 4)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("6_3eqwl")
expand_mode = 1

[node name="BatteryHUD" type="Control" parent="CanvasLayer/Control"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -64.0
offset_right = 64.0
grow_vertical = 0
script = ExtResource("2_2tviy")
textures = [ExtResource("4_7135u"), ExtResource("5_nmrjm"), ExtResource("6_8fs0f"), ExtResource("7_6j7pn"), ExtResource("8_qx0xh")]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/BatteryHUD"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -33.0
offset_right = 24.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2

[node name="Timer" type="Timer" parent="CanvasLayer/Control/BatteryHUD"]
autostart = true

[node name="StaminaHUD" type="Control" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -19.0
offset_top = -59.0
offset_right = 21.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("13_n10ot")

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/Control/StaminaHUD"]
custom_minimum_size = Vector2(100, 10)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -10.0
offset_right = 50.0
grow_horizontal = 2
grow_vertical = 0
max_value = 1.0
step = 0.0
value = 1.0
show_percentage = false

[node name="AudioHeavyAmbiance" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("9_3jlsf")
volume_db = 0.964
max_distance = 2.0
bus = &"Ambiance"

[node name="AudioChase" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("14_lbhoc")
volume_db = -80.0
autoplay = true
max_distance = 2.0
bus = &"Ambiance"

[node name="AudioOutsideAmbiance" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("12_75cni")
volume_db = 0.964
max_distance = 2.0
bus = &"Ambiance"

[node name="Footsteps" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_now15")
bus = &"SFX"

[node name="AudioOutOfBreath" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("21_t2lyc")

[connection signal="timeout" from="CanvasLayer/Control/BatteryHUD/Timer" to="CanvasLayer/Control/BatteryHUD" method="checkBattery"]
